--- a/ecos-delegues.html
+++ b/ecos-delegues.html
@@ -24,7 +24,7 @@
             color: #B7E4C7;
         }
         input {
-            background-color: #40916C;
+            background-color: #155d27;
             color: white;
             border: none;
             padding: 10px;
@@ -38,11 +38,13 @@
         button {
             padding: 10px 20px;
             font-size: 18px;
-            background-color: #40916C;
+            background-color: #155d27;
             color: white;
             border: none;
             cursor: pointer;
             margin: 10px;
+            border-radius: 10%;
+
         }
     </style>
 </head>
