--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="timer" id="timer">50:00</div>
 
     <div id="code-container">
-        <p id="question">alimentation</p>
+        <p id="question">alimentation 1</p>
         <input type="text" id="input" placeholder="Entrez le code">
     </div>
     
